@@ -144,7 +144,7 @@ struct config_file {
 	/** the target fetch policy for the iterator */
 	char* target_fetch_policy;
 	/** percent*10, how many times in 1000 to pick low rtt destinations */
-	int low_rtt_pct;
+	int low_rtt_permil;
 	/** what time in msec is a low rtt destination */
 	int low_rtt;
 
